--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,17 @@
     <script src="../js/miJS.js"></script>
 </head>
 <body>
-<input type="button" onclick="areaRectangulo(5,10)" value="areaRectangulo">
-<input type="button" onclick="total()" value="total">
-<input id="botondatos" name="Informacion" type="button" onclick="obtenerDatos(this.id,this.name,this.value)" value="Datos">
+<input type="button" onclick="areaRectangulo(5,10)" value="areaRectangulo"><br/>
+<br/>
+<input type="button" onclick="total()" value="total"><br/>
+<br/>
+<input id="boton datos" name="Informacion" type="button" onclick="obtenerDatos(this.id,this.name,this.value)" value="Datos"><br/>
+<br/>
+<input type="button" onclick="pregunta()" value="Funcion confirm"><br/>
+<br/>
+<input id="change" type="button" onclick="changeValue()" value="Cambiar"><br/>
+<br/>
+<br/>
 <div id="alert"></div>
 </body>
 </html>
