--- a/web/index.html
+++ b/web/index.html
@@ -18,5 +18,9 @@
 <br/>
 <br/>
 <div id="alert"></div>
+
+<input type="submit" value="enviar" onclick="enviar()">
+<input id="nombre" type="text" value="">
+<input id="responder" type="text" value="">
 </body>
 </html>
