--- a/web/index.html
+++ b/web/index.html
@@ -22,5 +22,7 @@
 <input type="submit" value="enviar" onclick="enviar()">
 <input id="nombre" type="text" value="">
 <input id="responder" type="text" value="">
+<input  type="button" value="datos" onclick="objetjson()">
+<input  type="button" value="convertir_json" onclick="serializacionJSON()">
 </body>
 </html>
